Darken the orange colour.

--- a/public/stylesheets/sass/_mixins.scss
+++ b/public/stylesheets/sass/_mixins.scss
@@ -6,7 +6,7 @@
 $blue: #3f8fba;
 $dark-blue: darken(#0984C8,10%);
 $green: #8EDE3D;
-$orange: #FF7800;
+$orange: #e07000;
 
 $grey: #2b2b2b;
 $light-grey: #ddd;
