--- a/app/views/shared/_stream_element.html.haml
+++ b/app/views/shared/_stream_element.html.haml
@@ -42,7 +42,7 @@
       - elsif reshare?(post)
         = render 'reshares/reshare', :reshare => post, :post => post.root
       - else
-        = render 'status_messages/status_message', :post => post, :photos => post.photos
+        = render 'status_messages/status_message', :post => post, :photos => post.respond_to?(:photos) ? post.photos : []
 
       .info
         %span.via
