Do a manual rebase of Fermionic Diaspora code on top of the latest Diaspora code.
Main changes:

	Allow postees to see who else received the post
	Allow a person to prevent personal content from showing in email notifications
	Increase maximum post size to 500,000 characters
	Add support for TOS and Privacy Policy

--- a/app/views/devise/passwords/new.haml
+++ b/app/views/devise/passwords/new.haml
@@ -1,7 +1,12 @@
+-#   Modified 5/4/2012 by Zach Prezkuta
+-#   Add a line to advise users that the password-reset
+-#   email may go to the Spam folder of their email
+
 .span-12.prepend-6.last
   .floating
     %h2
       = t('.forgot_password')
+    =t('.forgot_password_spam')
     - unless devise_error_messages!.empty?
       %i= t('.no_account')
 
