--- a/app/views/devise/passwords/new.mobile.haml
+++ b/app/views/devise/passwords/new.mobile.haml
@@ -9,6 +9,7 @@
         %fieldset
           %legend
             =t('.forgot_password')
+          =t('.forgot_password_spam')
           - unless devise_error_messages!.empty?
             %i=  t('.no_account')
 
