--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,9 @@
 -#   Copyright (c) 2010-2011, Diaspora Inc.  This file is
 -#   licensed under the Affero General Public License version 3 or later.  See
 -#   the COPYRIGHT file.
+-#
+-#   Modified 5/4/2012 Zach Prezkuta
+-#   Added links to the Terms of Service and Privacy Policy to the footer
 
 !!!
 %html{:lang => I18n.locale.to_s, :dir => (rtl?) ? 'rtl' : 'ltr'}
@@ -68,6 +71,8 @@
     %footer
       .container
         %ul#footer_nav
+          %li= link_to t('tos'), "/tos.html"
+          %li= link_to t('privacy'), "/privacy.html"
           %li= link_to '@joindiaspora', "http://twitter.com/joindiaspora"
           %li= link_to 'github', "https://github.com/diaspora/diaspora"
           %li= link_to t('layouts.header.blog'), "http://blog.joindiaspora.com"
