--- a/app/views/notifier/comment_on_post.text.haml
+++ b/app/views/notifier/comment_on_post.text.haml
@@ -1,1 +1,7 @@
-!= comment_message(@notification.comment)
+-#  Modified 10/14/2011 by Zach Prezkuta
+-#  Added check if user whose text is going into the email notification has disallowed
+-#  his posts etc. from showing up in email notifications. If so, use the alternate
+-#  text
+
+!= @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.comment_on_post.silenced', :name => "#{@notification.sender.name}")}" : comment_message(@notification.comment)
+
