--- a/app/views/notifier/mentioned.html.haml
+++ b/app/views/notifier/mentioned.html.haml
@@ -1,4 +1,9 @@
+-#  Modified 5/4/2012 by Zach Prezkuta
+-#  Added check if user whose text is going into the email notification has disallowed
+-#  his posts etc. from showing up in email notifications. If so, use the alternate
+-#  text
+
 %p
-  = post_message(@notification.post, :process_newlines => true, :length => 600)
+  = @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.mentioned.silenced', :name => "#{@notification.sender.name}")}" : post_message(@notification.post, :process_newlines => true, :length => 600)
 %p
   = link_to t('notifier.comment_on_post.reply', :name => @notification.post.author.name), post_url(@notification.post)
