--- a/app/views/notifier/private_message.text.haml
+++ b/app/views/notifier/private_message.text.haml
@@ -1,1 +1,7 @@
-!= @notification.message.text
+-#  Modified 5/4/2012 by Zach Prezkuta
+-#  Added check if user whose text is going into the email notification has disallowed
+-#  his posts etc. from showing up in email notifications. If so, use the alternate
+-#  text
+
+!= @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.private_message.silenced', :name => "#{@notification.sender.name}")}" : @notification.message.text
+
