--- a/app/views/shared/_footer.mobile.haml
+++ b/app/views/shared/_footer.mobile.haml
@@ -1,5 +1,18 @@
+-# Modified 5/4/2012 Zach Prezkuta
+-# Add links to notifications and private messages to the mobile footer
+-# Rearrange links
+
 %footer
+  = link_to t('notifications.index.notifications'), notifications_path
+  = "(#{@notification_count})"
+  = link_to t('conversations.index.message_inbox'), conversations_path
+  = "(#{@unread_message_count})"
+  %br
+  %br
+  = link_to t('layouts.application.toggle'), toggle_mobile_path
+  %br
+  %br
   %strong
     = link_to current_user.name, current_user.person
-  = link_to t('layouts.application.toggle'), toggle_mobile_path
   = link_to t('layouts.header.logout'), destroy_user_session_path
+
