--- a/app/views/shared/_photo_area.mobile.haml
+++ b/app/views/shared/_photo_area.mobile.haml
@@ -1,6 +1,10 @@
 -#   Copyright (c) 2010-2011, Diaspora Inc.  This file is
 -#   licensed under the Affero General Public License version 3 or later.  See
 -#   the COPYRIGHT file.
+-#
+-#   Modified 5/4/2012 Zach Prezkuta
+-#   Made the image displayed on the mobile view into a link to allow viewing of all the photos attached to a post
+-#        = image_tag post.photos.first.url(:thumb_large), :class => "stream-photo big-stream-photo"
 
 .photo_area
   - if post.is_a?(StatusMessage)
@@ -9,7 +13,7 @@
         - if post.photos.size > 1
           .additional_photo_count
             = "+ #{post.photos.size-1}"
-        = image_tag post.photos.first.url(:thumb_large), :class => "stream-photo big-stream-photo"
+        = link_to (image_tag post.photos.first.url(:thumb_large), :class => "stream-photo big-stream-photo"), photo_path(post.photos.first), :class => "stream-photo-link"
   - elsif post.activity_streams?
     = image_tag post.image_url
 
