--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,10 @@
 -#   Copyright (c) 2010-2011, Diaspora Inc.  This file is
 -#   licensed under the Affero General Public License version 3 or later.  See
 -#   the COPYRIGHT file.
+-#
+-#   Modified 5/4/2012 by Zach Prezkuta
+-#   Added option for user to disallow self's posts (or comments, etc.)
+-#   to show up in email notifications
 
 - content_for :page_title do
   = t('.edit_account')
@@ -169,6 +173,14 @@
         %p.checkbox_select
           = type.label :reshared, t('.reshared')
           = type.check_box :reshared, {:checked =>  @email_prefs['reshared']}, false, true
+
+
+        %br
+        %br
+        %br
+        %p.checkbox_select
+          = type.label t('.silenced') 
+          = type.check_box :silent, {:checked =>  @email_prefs['silent']}, false, true 
     %br
     = f.submit t('.change'), :class => "button"
 
