--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -72,7 +72,7 @@
       .container
         %ul#footer_nav
           %li= link_to t('tos'), "/tos.html"
-          %li= link_to t('privacy'), "/privacy.html"
+          %li= link_to t('privacy_pol'), "/privacy.html"
           %li= link_to '@joindiaspora', "http://twitter.com/joindiaspora"
           %li= link_to 'github', "https://github.com/diaspora/diaspora"
           %li= link_to t('layouts.header.blog'), "http://blog.joindiaspora.com"
