Do a manual rebase of Fermionic Diaspora code on top of version 2.2.2 of the Diasp0ra.ca code.
Main changes:

	Allow postees to see who else received the post
	Allow a person to prevent personal content from showing in email notifications
	Increase maximum post size to 500,000 characters
	Add support for TOS and Privacy Policy
        Mobile changes: sort order, disable liking, add links for notifications and private messages

--- a/app/views/devise/passwords/new.haml
+++ b/app/views/devise/passwords/new.haml
@@ -2,6 +2,7 @@
   .floating
     %h3
       =t('.forgot_password')
+    =t('.forgot_password_spam')
     - unless devise_error_messages!.empty?
       %i=  t('.no_account')
 
