--- a/app/views/shared/_stream_element.mobile.haml
+++ b/app/views/shared/_stream_element.mobile.haml
@@ -19,7 +19,7 @@
     .floater
       = mobile_reshare_icon(post)
       = mobile_comment_icon(post)
-      = mobile_like_icon(post)
+      != mobile_like_icon(post)
 
     != reactions_link(post)
 
