--- a/app/views/notifier/liked.html.haml
+++ b/app/views/notifier/liked.html.haml
@@ -3,7 +3,7 @@
     = "#{t('.liked_comment', :name => "#{@notification.sender.name}")}:"
 
   %p{:style => "font-style:italic;color:#666"}
-    = @notification.like.target.hint
+    = @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.liked.silenced')}" : @notification.like.target.hint
 
   %p
     = link_to t('.view_post'), post_url(@notification.like.target.post)
@@ -12,7 +12,7 @@
     = "#{t('.liked', :name => "#{@notification.sender.name}")}:"
 
   %p{:style => "font-style:italic;color:#666"}
-    = post_message(@notification.like.target, :process_newlines => true)
+  = @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.liked.silenced')}" : post_message(@notification.like.target, :process_newlines => true)
 
   %p
     = link_to t('.view_post'), post_url(@notification.like.target)
