--- a/app/views/notifier/liked.text.haml
+++ b/app/views/notifier/liked.text.haml
@@ -1,3 +1,3 @@
 != "#{t('notifier.liked.liked', :name => "#{@notification.sender.name}")}:"
-!=post_message(@notification.like.target)
+!= @notification.text_owner.user_preferences.exists?(:email_type => 'silent') ? "#{t('notifier.liked.silenced_text')}" : post_message(@notification.like.target)
 
