--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -649,6 +649,14 @@ footer {
   @include border-radius(3px);
   text-align: center; }
 
+.icon {
+  display: inline-block;
+  height: 24px;
+  width: 24px;
+  margin-left: 5px;
+  margin-right: 5px;
+  vertical-align: top }
+
 .image_link {
   display: inline-block;
   background: {
