--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,8 +11,7 @@
   - if !current_user
     .right
       %ul#landing_nav
-        %li= link_to '@diasp0raca', "http://twitter.com/diasp0raca"
-        %li= link_to 'github', "https://github.com/Pistos/diaspora"
+        %li= link_to 'github', "https://github.com/fermionic/diaspora"
         %li= link_to t('.login'), new_user_session_path, :class => 'login'
 
   - elsif (current_user || !@landing_page)
